docs: Translated Arabic comments to English & Added Live Status to README.md

--- a/lib/l10n/arb/app_ar.arb
+++ b/lib/l10n/arb/app_ar.arb
@@ -31,6 +31,7 @@
     "save": "حفظ",
     "hour": "ساعة",
     "minute": "دقيقة",
+    "imsak": "الإمساك",
     "fajr": "الفجر",
     "dhuhr": "الظهر",
     "asr": "العصر",
