--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -31,6 +31,7 @@
     "save": "Save",
     "hour": "hour",
     "minute": "minute",
+    "imsak": "Imsak",
     "fajr": "Fajr",
     "dhuhr": "Dhuhr",
     "asr": "Asr",
